Ajout des attributs dans l'entite user

--- a/FoodFast/src/App/PlatformBundle/Resources/views/layout.html.twig
+++ b/FoodFast/src/App/PlatformBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% extends "::layout.html.twig" %}
 
-{% block title %} Annonces - {{ parent() }}{% endblock %}
+{% block title %} Annonces {% endblock %}
 
 {# css specifique aux layouts du bundle #}
 {% block app_platform_css %}{% endblock %}
