--- a/FoodFast/app/Resources/views/layout.html.twig
+++ b/FoodFast/app/Resources/views/layout.html.twig
@@ -2,29 +2,39 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}{% endblock %}</title>
-  {% block stylesheets %}
-      {# On charge le CSS de bootstrap depuis le site directement #}
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  {% endblock %}
-</head>
-<body>
-    
-  <div class="container">
-    <div class="row">
-      <div id="content" class="col-md-9 col-lg-9 col-xs-9">
-        {% block body %}{% endblock %}
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>{% block title %}{% endblock %}</title>
+      {% block stylesheets %}
+          {# On charge le CSS de bootstrap depuis le site directement #}
+          <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+      {% endblock %}
+    </head>
+    <body>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9 col-lg-9 col-xs-9">
+            {% block headers %}{% endblock %}
+          </div>
+        </div>
+        <div class="row">
+          <div id="content" class="col-md-9 col-lg-9 col-xs-9">
+            {% block body %}{% endblock %}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-9 col-lg-9 col-xs-9">
+            {% block footers %}{% endblock %}
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
- 
-  {% block javascripts %}
-      <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  {% endblock %}
-    {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
-    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
-</body>
+
+      {% block javascripts %}
+          <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+      {% endblock %}
+        {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
+    </body>
 </html>
