--- a/FoodFast/src/App/PlatformBundle/Resources/views/Connexion/connexion.html.twig
+++ b/FoodFast/src/App/PlatformBundle/Resources/views/Connexion/connexion.html.twig
@@ -1,7 +1,65 @@
 {% extends "AppPlatformBundle::layout.html.twig" %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}Espace Client FoodFast{% endblock %}
 
 {% block app_platform_body %}
-  Connexion
+    <div class="row">
+        <div class="tiltle">
+            <h1>Mon compte</h1>
+        </div>
+        <div class="col-xs-5 col-md-5 col-lg-5">
+            <div class="identification">
+                <label>Identifiez-vous</label>
+            </div>
+            <form class="form-horizontal" method="post" action="">
+                <div class="form-group input-email">
+                    <input type="email" class="form-control" id="email" placeholder=" Email *"/>
+                </div>
+                <div class="form-group input-pwd">
+                    <input type="password" class="form-control" id="passwrd" placeholder=" Mot de passe *"/>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary">Valider</button>
+                </div>
+            </form>
+        </div>
+        <div class="col-xs-7 col-md-7 col-lg-7">
+            <div class="identification">
+                <label>Vous êtes nouveau client sur FoodFast</label>
+            </div>
+            <form method="POST" name="app_platformbundle_user" class="form-horizontal">
+                <div class="form-group">
+                    {{form_widget(form.nom)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.prenom)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.email)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.passwrd)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.adresse)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.codePostal)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.telephone)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.email)}}
+                </div>
+                <div class="form-group">
+                    {{form_widget(form.Inscription)}}
+                </div>
+                <div>
+                    {{ form_rest(form) }}
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
+{% block javascripts %}{% endblock %}
