--- a/FoodFast/src/App/PlatformBundle/Resources/views/Connexion/connexion.html.twig
+++ b/FoodFast/src/App/PlatformBundle/Resources/views/Connexion/connexion.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Espace Client FoodFast{% endblock %}
 
 {% block app_platform_body %}
-    <div class="row">
+    <!--<div class="row">-->
         <div class="tiltle">
             <h1>Mon compte</h1>
         </div>
@@ -60,6 +60,6 @@
                 </div>
             </form>
         </div>
-    </div>
+    <!--</div>-->
 {% endblock %}
 {% block javascripts %}{% endblock %}
