--- a/FoodFast/app/Resources/views/layout.html.twig
+++ b/FoodFast/app/Resources/views/layout.html.twig
@@ -13,18 +13,13 @@
     <body>
       <div class="container">
         <div class="row">
-          <div class="col-lg-offset-1 col-md-offset-1 col-md-10 col-lg-10 col-xs-10">
+          <div class="headers">
             {% block headers %}{% endblock %}
           </div>
         </div>
         <div class="row">
-          <div id="content" class="col-lg-offset-1 col-md-offset-1 col-md-10 col-lg-10 col-xs-10">
+          <div id="content">
             {% block body %}{% endblock %}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-offset-1 col-md-offset-1 col-md-10 col-lg-10 col-xs-10">
-            {% block footers %}{% endblock %}
           </div>
         </div>
       </div>
