--- a/FoodFast/src/App/AdminBundle/Resources/views/layout.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/layout.html.twig
@@ -12,6 +12,8 @@
   {# On définit un nouveau bloc, que les vues du bundle pourront remplir #}
   {% block app_admin_body %}{% endblock %}
   
+  {% block footers %}{% endblock %}
+  
   {# js specifique aux layouts du bundle #}
   {% block app_admin_javascripts %}{% endblock %}
 
