--- a/FoodFast/src/App/AdminBundle/Resources/views/Gestion/produit.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/Gestion/produit.html.twig
@@ -6,17 +6,30 @@
     <div class="tiltle">
         <h1>Gestion des produits</h1>
     </div>
-    <div class="col-xs-5 col-md-5 col-lg-5">
+    <div class="col-xs-3 col-md-3 col-lg-3">
        <ul class="list-group">
-         <li class="list-group-item disabled">Produits</li>
-         <li class="list-group-item">Promos</li>
+         <li class="list-group-item disabled" id="products">Produits</li>
+         <li class="list-group-item" id="promos">Promos</li>
        </ul>
     </div>
-    <div class="col-xs-7 col-md-7 col-lg-7">
-      <form method="POST" name="app_platformbundle_user" class="form-horizontal">
-        {{form_widget(form.nomProduit)}}
-        {{form_widget(form.typeProduit)}}
-        {{form_widget(form.detailProduit)}}
+    <div class="col-xs-6 col-md-6 col-lg-6">
+      <form method="POST" name="app_adminformbundle_user" class="form-horizontal" action="">
+        <div class="form-group">
+           {{form_label(form.nomProduit)}}
+           {{form_widget(form.nomProduit)}}
+        </div>
+        <div class="form-group">
+           {{form_widget(form.typeProduit)}}
+        </div>
+        <div class="form-group">
+           {{form_widget(form.detailProduit)}}
+        </div>
+        <div class="form-group">
+           {{ form_widget(form.Valider) }}
+        </div>
+        <div>
+           {{ form_rest(form) }}
+        </div>
       </form>
     </div>
 {% endblock %}
