Maj table promo et configuration AsseticBundle

--- a/FoodFast/src/App/AdminBundle/Resources/views/layout.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/layout.html.twig
@@ -17,6 +17,9 @@
 
 {# js specifique aux layouts du bundle #}
   {% block javascripts %}
-     <script src="{{ asset('bundles/appadmin/js/gestion_produit.js') }}"></script>
+     {% javascripts '@AppAdminBundle/Resources/public/js/*' %}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+     {# <script src="{{ asset('bundles/appadmin/js/gestion_produit.js') }}"></script> #}
   {% endblock %}
 
