--- a/FoodFast/app/Resources/views/layout.html.twig
+++ b/FoodFast/app/Resources/views/layout.html.twig
@@ -22,8 +22,6 @@
           </div>
         </div>
       </div>
-      {% block javascripts %}
-          <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
-      {% endblock %}
+      {% block javascripts %}{% endblock %}
     </body>
 </html>
