--- a/FoodFast/src/App/AdminBundle/Resources/views/layout.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/layout.html.twig
@@ -5,7 +5,10 @@
 {% block title %}FoodFast{% endblock %}
 
 {# css specifique aux layouts du bundle #}
-{% block app_admin_css %}{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+{% endblock %}
 
 {% block body %}
     
@@ -16,9 +19,11 @@
 {% endblock %}
 
 {# js specifique aux layouts du bundle #}
-  {% block javascripts %}
-     {% javascripts '@AppAdminBundle/Resources/public/js/*' %}
-        <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-  {% endblock %}
+{% block javascripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+   {% javascripts '@AppAdminBundle/Resources/public/js/*' %}
+      <script src="{{ asset_url }}"></script>
+   {% endjavascripts %}
+{% endblock %}
 
