Creation du fichier css & modification de fichier gitignore

--- a/FoodFast/src/App/AdminBundle/Resources/views/Gestion/promo.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/Gestion/promo.html.twig
@@ -34,7 +34,7 @@
            </div>
         </div>
         <div class="form-group">
-           {{form_label(form.Valider)}}
+           {{form_widget(form.Valider)}}
            {{ form_widget(form.Annuler) }}
         </div>
         <div>
