--- a/FoodFast/src/App/AdminBundle/Resources/public/css/gestion_admin.css
+++ b/FoodFast/src/App/AdminBundle/Resources/public/css/gestion_admin.css
@@ -3,6 +3,6 @@
  * @author BALDE Mamadou - mamoudous2005@yahoo.fr
  */
 
-#app_platformbundle_promo_Valider{
+.bouton-bloc .bouton-valider{
     margin-left: 13px;
 }
