--- a/FoodFast/src/App/AdminBundle/Resources/views/Gestion/promo.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/Gestion/promo.html.twig
@@ -7,10 +7,7 @@
         <h1>Gestion des produits</h1>
     </div>
     <div class="col-lg-offset-1 col-md-offset-1 col-xs-3 col-md-3 col-lg-3">
-       <ul class="list-group">
-         <li class="list-group-item" id="products"><a href="{{ path('app_admin_gestionproduit') }}">Produits</a></li>
-         <li class="list-group-item disabled" id="promos">Promos</li>
-       </ul>
+       {% include  "AppAdminBundle:Gestion:menu.html.twig" %}
     </div>
     <div class="col-xs-6 col-md-6 col-lg-6">
       <h2 class="titre_form">Ajout Promo</h2>
@@ -33,7 +30,7 @@
               <input type='text' class="form-control" id='datetimepicker' />
            </div>
         </div>
-        <div class="form-group">
+        <div class="form-group bouton-bloc">
            {{form_widget(form.Valider)}}
            {{ form_widget(form.Annuler) }}
         </div>
