Modification du fichier gestion-admin.js pour gerer le menu

--- a/FoodFast/src/App/PlatformBundle/Resources/views/Connexion/connexion.html.twig
+++ b/FoodFast/src/App/PlatformBundle/Resources/views/Connexion/connexion.html.twig
@@ -7,7 +7,7 @@
         <div class="tiltle">
             <h1>Mon compte</h1>
         </div>
-        <div class="col-lg-offset-1 col-md-offset-1 col-xs-5 col-md-5 col-lg-5">
+        <div class="col-xs-4 col-md-4 col-lg-4">
             <div class="identification">
                 <label>Identifiez-vous</label>
             </div>
