--- a/FoodFast/src/App/AdminBundle/Resources/views/Gestion/promo.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/Gestion/promo.html.twig
@@ -11,7 +11,7 @@
     </div>
     <div class="col-xs-6 col-md-6 col-lg-6">
       <h2 class="titre_form">Ajout Promo</h2>
-      <form method="POST" name="app_adminformbundle_user" class="form-horizontal" action="path('app_admin_gestionpromo')">
+      <form method="POST" name="app_adminformbundle_user" class="form-horizontal" action="{{path('app_admin_gestionpromo')}}">
         <div class="form-group">
            {{form_label(form.description)}}
            {{form_widget(form.description)}}
@@ -23,6 +23,10 @@
         <div class="form-group">
            {{form_label(form.quantite)}}
            {{form_widget(form.quantite)}}
+        </div>
+        <div class="form-group">
+           {{form_label(form.Type)}}
+           {{form_widget(form.Type)}}
         </div>
         <div>
            <label>Validite *</label>
