--- a/FoodFast/src/App/AdminBundle/Resources/public/css/gestion_admin.css
+++ b/FoodFast/src/App/AdminBundle/Resources/public/css/gestion_admin.css
@@ -6,3 +6,12 @@
 .bouton-bloc .bouton-valider{
     margin-left: 13px;
 }
+
+.add-price-witdth{
+    background-color: #428bca;
+    padding: 7px 11px 7px 11px;
+    color: #fff;
+    font-weight: 100;
+    border-radius: 4px;
+    cursor: pointer;
+}
