--- a/FoodFast/src/App/AdminBundle/Resources/views/Gestion/produit.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/Gestion/produit.html.twig
@@ -32,6 +32,10 @@
            {{form_label(form.prix)}}
            {{form_widget(form.prix)}}
         </div>
+        <div class="form-group new-bl-heightPrice" id="new-bl-heightPrice">
+            <label class="add-price-witdth">Nouvelle Taille et Prix</label>
+        </div>
+        
         <div class="form-group bouton-bloc">
            {{ form_widget(form.Valider) }}
            {{ form_widget(form.Annuler) }}
