creation d'ajout de nouvelle taille et prix d'un produit

--- a/FoodFast/src/App/AdminBundle/Resources/views/Gestion/produit.html.twig
+++ b/FoodFast/src/App/AdminBundle/Resources/views/Gestion/produit.html.twig
@@ -32,8 +32,10 @@
            {{form_label(form.prix)}}
            {{form_widget(form.prix)}}
         </div>
-        <div class="form-group new-bl-heightPrice" id="new-bl-heightPrice">
-            <label class="add-price-witdth">Nouvelle Taille et Prix</label>
+        <div class="new-bl-heightPrice" id="new-bl-heightPrice">
+            <div id="bloc-btn-new-t-p" class="form-group">
+                <label class="add-price-witdth" id="add-price-witdth">Nouvelle Taille et Prix</label>
+            </div>
         </div>
         
         <div class="form-group bouton-bloc">
